# sibernetic

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  ConfigBuilder.py  GNUmakefile  README.md  SiberneticReplay.py  main_sim.py  makefile  makefile.OSX  makefile_clang  plot_positions.py  pytorch_solver.py  render_movie.py  requirements.txt  run_all_tests.sh  setup.sh  sibernetic_c302.py  taichi_solver.py  test.sh
.github/workflows/: ci-build-intel.yml  ci-build.yml
20 cm long worm/: main_sim.py
docs/: APPLE_SILICON.md
inc/: owConfigProperty.h  owFastRenderer.h  owHelper.h  owINeuronSimulator.h  owMetalSolver.h  owNeuronSimulator.h  owOpenCLConstant.h  owOpenCLSolver.h  owPhysicTest.h  owPhysicsFluidSimulator.h  owSignalSimulator.h  owSolver.h
inc/OpenCL/: cl.hpp
inc/metal/: owMetalRenderer.h  owMetalSolver.h
logs/: kinetic_energy_distrib.txt  potential_energy_distrib.txt
scripts/: benchmark.sh  build_metal.sh  build_opencl.sh  setup_macos.sh
src/: main.cpp  metal_private_impl.cpp  owConfigProperty.cpp  owFastRenderer.cpp  owHelper.cpp  owMetalPrivateImpl.cpp  owMetalSolver.cpp  owPhysicsFluidSimulator.cpp  owWorldSimulation.cpp
src/backend/: MetalBackend.cpp  MetalBackend.h  OpenCLBackend.cpp  OpenCLBackend.h
src/convert/: MetalConvert.h  OpenCLConvert.h
src/kernels/: ClearBuffersKernel.h  ClearMembraneBuffersKernel.h  ComputeDensityKernel.h  ComputeInteractionWithMembranesKernel.h  FindNeighborsKernel.h  HashParticlesKernel.h  IndexxKernel.h  PcisphComputeElasticForcesKernel.h  PcisphComputeForcesKernel.h  PcisphComputePressureForceAccelerationKernel.h  PcisphCorrectPressureKernel.h  PcisphIntegrateKernel.h  PcisphPredictDensityKernel.h  PcisphPredictPositionsKernel.h  SortPostPassKernel.h
src/kernels/common/: KernelArgs.h
src/metal/: owMetalRenderer.cpp  owMetalSolver.cpp  particleRenderer.metal  sphFluid.metal
src/test/: owPhysicTest.cpp
src/types/: HostTypes.h  MetalTypes.h
tests/: .test.wah.mep  .test.wah.omt  README.md  conftest.py  metal_private_impl.cpp  opencl_hash_particles_gtest.cpp  opencl_test_utils.h  test_cpp_integration.py  test_energy.py  test_physics_parity.py  test_pytorch_solver.py  test_solver_logs.py  test_torch_backend.py  test_utils.h  test_validation.py  test_worm_alone_half.py
tests/clear_buffers/: clear_buffers_test.cpp  clear_buffers_test_common.h  metal_clear_buffers_runner.h  opencl_clear_buffers_runner.h
tests/clear_membrane_buffers/: clear_membrane_buffers_test.cpp  clear_membrane_buffers_test_common.h  metal_clear_membrane_buffers_runner.h  opencl_clear_membrane_buffers_runner.h
tests/compute_density/: compute_density_gtest.cpp  compute_density_test_common.h  metal_compute_density_runner.h  opencl_compute_density_runner.h
tests/compute_interaction_with_membranes/: compute_interaction_with_membranes_test.cpp  compute_interaction_with_membranes_test_common.h  metal_compute_interaction_with_membranes_runner.h  opencl_compute_interaction_with_membranes_runner.h
tests/data/logs/: total_energy_distrib.txt
tests/data/reference_logs/: positions_step0.txt
tests/find_neighbors/: find_neighbors_gtest.cpp  find_neighbors_test_common.h  metal_find_neighbors_runner.h  opencl_find_neighbors_runner.h
tests/hash_particles/: hash_particles_gtest.cpp  hash_particles_test_common.h  metal_hash_particles_gtest.cpp  metal_hash_particles_runner.h  opencl_hash_particles_gtest.cpp  opencl_hash_particles_runner.h
tests/indexx/: indexx_gtest.cpp  indexx_test_common.h  metal_indexx_runner.h  opencl_indexx_runner.h
tests/pcisph_compute_elastic_forces/: metal_pcisph_compute_elastic_forces_runner.h  opencl_pcisph_compute_elastic_forces_runner.h  pcisph_compute_elastic_forces_test.cpp  pcisph_compute_elastic_forces_test_common.h
tests/pcisph_compute_forces/: metal_pcisph_compute_forces_runner.h  opencl_pcisph_compute_forces_runner.h  pcisph_compute_forces_test.cpp  pcisph_compute_forces_test_common.h
tests/pcisph_compute_pressure_force_acceleration/: metal_pcisph_compute_pressure_force_acceleration_runner.h  opencl_pcisph_compute_pressure_force_acceleration_runner.h  pcisph_compute_pressure_force_acceleration_test.cpp  pcisph_compute_pressure_force_acceleration_test_common.h
tests/pcisph_correct_pressure/: metal_pcisph_correct_pressure_runner.h  opencl_pcisph_correct_pressure_runner.h  pcisph_correct_pressure_test.cpp  pcisph_correct_pressure_test_common.h
tests/pcisph_integrate/: metal_pcisph_integrate_runner.h  opencl_pcisph_integrate_runner.h  pcisph_integrate_test.cpp  pcisph_integrate_test_common.h
tests/pcisph_predict_density/: metal_pcisph_predict_density_runner.h  opencl_pcisph_predict_density_runner.h  pcisph_predict_density_test.cpp  pcisph_predict_density_test_common.h
tests/pcisph_predict_positions/: metal_pcisph_predict_positions_runner.h  opencl_pcisph_predict_positions_runner.h  pcisph_predict_positions_test.cpp  pcisph_predict_positions_test_common.h
tests/sort_post_pass/: metal_sort_post_pass_runner.h  opencl_sort_post_pass_runner.h  sort_post_pass_gtest.cpp  sort_post_pass_test_common.h
tests/utils/: backend_param_test.h  metal_context.h  metal_helpers.h  metal_test_utils.h  metal_types.h  opencl_context.h  opencl_helpers.h  opencl_test_utils.h  test_utils.h  types.h
tests/utils/arg/: metal_arg_binding.h  opencl_arg_binding.h
tests/utils/buffer/: metal_buffer_utils.h  opencl_buffer_utils.h
tests/utils/common/: backend_param_test.h  test_utils.h
tests/utils/context/: metal_context.h  opencl_context.h
tests/utils/convert/: metal_convert_utils.h  opencl_convert_utils.h
tests/utils/neighbormap/: neighbor_map_helpers.h
tests/utils/types/: metal_types.h  types.h
wcon/: generate_wcon.py
